--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,6 @@
 <h1>Welcome to Donation website</h1>
     <a href="/new" methods="get">로그인 페이지</a><br>
     <a href="/admin" methods="get">관리자 페이지</a><br>
-    <a href="/new" methods="get">켐페인 페이지</a><br>
+    <a href="/new/campaign" methods="get">켐페인 페이지</a><br>
 </body>
 </html>
