--- a/src/main/resources/templates/admin/admin_home.html
+++ b/src/main/resources/templates/admin/admin_home.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <title>관리자 홈</title>
 </head>
 <body>
-<h6>관리자 페이지</h6>
-<ul></ul>
-<a href="/admin/category">카테고리 페이지</a>
-
+<div class="container">
+    <div class="py-5 text-center">
+        <h1>관리자 페이지</h1>
+    </div>
+    <ul></ul>
+    <a href="/admin/category">카테고리 페이지</a>
+</div>
 </body>
 </html>
