--- a/src/main/resources/templates/admin/category/addCategory.html
+++ b/src/main/resources/templates/admin/category/addCategory.html
@@ -2,21 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <title>카테고리 등록</title>
 </head>
 <body>
+<div class="container">
+
 <form method="post"
       action="/admin"
       th:object="${category}"
       th:action="@{/admin/category}">
     <div>
         <label for="name">새로운 카테고리</label>
-        <input type="text" id="name" th:field="*{name}">
+        <input class="form-control" type="text" id="name" th:field="*{name}">
     </div>
 
     <div>
-        <button type="submit">수정 완료</button>
+        <button class="w-100 btn btn-primary btn-lg" type="submit">수정 완료</button>
     </div>
 </form>
+
+</div>
 </body>
 </html>
