--- a/src/main/resources/templates/admin/category/category_home.html
+++ b/src/main/resources/templates/admin/category/category_home.html
@@ -2,10 +2,15 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <title>카테고리 관리 페이지</title>
 </head>
 <body>
-<table id="categoryTable">
+<table class="table" id="categoryTable">
     <thead>
     <tr>
         <th>Name</th>
@@ -15,21 +20,23 @@
     <tr th:each="category : ${categories}">
         <td th:text="${category.name}">name</td>
         <td>
+            <button class="btn btn-primary float-end"
+                    onclick="location.href='/'"
+                    th:onclick="|location.href='@{/admin/category/{category}(category=${category.name})}'|">수정
+            </button>
+        </td>
+        <td>
             <form action="/"
                   th:action="@{/admin/category/delete/{category}(category=${category.name})}"
                   method="post">
-                <button type="submit">삭제</button>
+                <button class="btn btn-secondary float-end" type="submit">삭제</button>
             </form>
-        </td>
-        <td>
-            <button onclick="location.href='/'"
-                    th:onclick="|location.href='@{/admin/category/{category}(category=${category.name})}'|">수정
-            </button>
         </td>
     </tr>
     </tbody>
 </table>
-<button onclick="location.href='/'"
+<button class="btn btn-primary float-end"
+        onclick="location.href='/'"
         th:onclick="|location.href='@{/admin/category/add}'|">등록
 </button>
 </body>
