--- a/src/main/resources/templates/admin/category/modifyCategory.html
+++ b/src/main/resources/templates/admin/category/modifyCategory.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">'
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <title>카테고리 수정</title>
 </head>
 <body>
-<form method="post"
-      action="/admin"
-      th:object="${category}"
-      th:action="@{/admin/category/{category}(category=${category.name})}">
-    <div>
-        <label for="name">수정할 이름</label>
-        <input type="text" id="name" th:field="*{name}">
-    </div>
+<div class="container">
+    <form method="post"
+          action="/admin"
+          th:object="${category}"
+          th:action="@{/admin/category/{category}(category=${category.name})}">
+        <div>
+            <label for="name">수정할 이름</label>
+            <input class="form-control" type="text" id="name" th:field="*{name}">
+        </div>
 
-    <div>
-        <button type="submit">수정 완료</button>
-    </div>
-</form>
+        <div>
+            <button type="submit" class="btn btn-primary float-end">수정 완료</button>
+        </div>
+    </form>
+</div>
 </body>
 </html>
