--- a/src/main/resources/templates/campaign/campaignList.html
+++ b/src/main/resources/templates/campaign/campaignList.html
@@ -2,41 +2,58 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <title>켐페인 리스트 페이지</title>
+    <style>
+        img {
+            width : 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-<table id="campaignTable">
-    <thead>
-    <tr>
-        <th>campaignId</th>
-        <th>subject</th>
-        <th>charityName</th>
-        <th>Name</th>
-        <th>deadline</th>
-        <th>currentAmount</th>
-        <th>coverImagePath</th>
-        <th>description</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="campaign : ${campaignList}">
-        <td th:text="${campaign.campaignId}">campaignId</td>
-        <td th:text="${campaign.subject}">subject</td>
-        <td th:text="${campaign.charityName}">charityName</td>
-        <td th:text="${campaign.deadline}">deadline</td>
-        <td th:text="${campaign.currentAmount}">currentAmount</td>
-        <td th:text="${campaign.goalAmount}">goalAmount</td>
-        <td th:text="${campaign.coverImagePath}">coverImagePath</td>
-        <td th:text="${campaign.description}">description</td>
-        <td>
-            <form action="/"
-                  th:action="@{/new/campaign/{id}(id=${campaign.campaignId})}"
-                  method="get">
-                <button type="submit">상세 보기</button>
-            </form>
-        </td>
-    </tr>
-    </tbody>
-</table>
+<div class="container" style="max-width: 1800px">
+    <div class="py-5 text-center">
+        <h2>켐페인 목록</h2>
+    </div>
+    <table id="campaignTable" class="table">
+        <thead>
+        <tr>
+            <th>cover Image</th>
+            <th>subject</th>
+            <th>charity Name</th>
+            <th>deadline</th>
+            <th>current Amount</th>
+            <th>goal Amount</th>
+            <th>description</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="campaign : ${campaignList}">
+            <td><img
+                    style="width: 5vw; min-width: 20px; height: 5vw"
+                    th:src="${campaign.coverImagePath}"
+                     alt="cover image"></td>
+            <td th:text="${campaign.subject}">subject</td>
+            <td th:text="${campaign.charityName}">charityName</td>
+            <td th:text="${campaign.deadline}">deadline</td>
+            <td th:text="${campaign.currentAmount}">currentAmount</td>
+            <td th:text="${campaign.goalAmount}">goalAmount</td>
+            <td th:text="${campaign.description}">description</td>
+            <td>
+                <form action="/"
+                      th:action="@{/new/campaign/{id}(id=${campaign.campaignId})}"
+                      method="get">
+                    <button type="submit" class="btn btn-primary float-end">상세 보기</button>
+                </form>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
