--- a/src/main/resources/templates/campaign/detailCampaign.html
+++ b/src/main/resources/templates/campaign/detailCampaign.html
@@ -2,54 +2,71 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <title>켐페인 상세</title>
+    <style>
+        img {
+            width : 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
-<form th:object="${campaign}">
-    <div>
-        <div>
-            <p><label for="campaignName">campaignName</label>
-                <input type="text" id="campaignName" th:field="*{campaignName}" class="form-control"
-                       th:errorclass="field-error"></p>
-            <p><label for="charityName">charityName</label>
-                <input type="text" id="charityName" th:field="*{charityName}" class="form-control"
-                       th:errorclass="field-error"></p>
-            <p><label for="deadline">deadline</label>
-                <input type="text" id="deadline" th:field="*{deadline}" class="form-control"
-                       th:errorclass="field-error"></p>
-            <p><label for="description">description</label>
-                <input type="text" id="description" th:field="*{description}" class="form-control"
-                       th:errorclass="field-error"></p>
-            <p><label for="currentAmount">currentAmount</label>
-                <input type="text" id="currentAmount" th:field="*{currentAmount}" class="form-control"
-                       th:errorclass="field-error"></p>
-            <p><label for="goalAmount">goalAmount</label>
-                <input type="text" id="goalAmount" th:field="*{goalAmount}" class="form-control"
-                       th:errorclass="field-error"></p>
-            <p><label for="coverImagePath">coverImagePath</label>
-                <input type="text" id="coverImagePath" th:field="*{coverImagePath}" class="form-control"
-                       th:errorclass="field-error"></p>
-            <p><label for="detailImagePath">detailImagePath</label>
-                <input type="text" id="detailImagePath" th:field="*{detailImagePath}" class="form-control"
-                       th:errorclass="field-error"></p>
-            <p><label for="reviewImagePath">reviewImagePath</label>
-                <input type="text" id="reviewImagePath" th:field="*{reviewImagePath}" class="form-control"
-                       th:errorclass="field-error"></p>
-        </div>
+<div class="container">
+    <div class="py-5 text-center">
+        <h2>켐페인 상세</h2>
     </div>
-</form>
-<form
-    method="get"
-    action="#"
-    th:action="@{/admin/limit/{id}(id = ${campaign.campaignId})}">
-    <label for="isAccept">승인</label>
-    <input id="isAccept" name="isAccept" type="radio" value="true" checked>
-    <label for="isNotAccept">거부</label>
-    <input id="isNotAccept" name="isAccept" type="radio" value="false">
-    <button type="submit">
-        승인 여부 변경
-    </button>
+    <form th:object="${campaign}">
+        <div>
+            <div>
+                <p><label for="campaignName">campaignName</label>
+                    <input disabled type="text" id="campaignName" th:field="*{campaignName}" class="form-control"
+                           th:errorclass="field-error"></p>
+                <p><label for="charityName">charityName</label>
+                    <input disabled type="text" id="charityName" th:field="*{charityName}" class="form-control"
+                           th:errorclass="field-error"></p>
+                <p><label for="deadline">deadline</label>
+                    <input disabled type="text" id="deadline" th:field="*{deadline}" class="form-control"
+                           th:errorclass="field-error"></p>
+                <p><label for="description">description</label>
+                    <input disabled type="text" id="description" th:field="*{description}" class="form-control"
+                           th:errorclass="field-error"></p>
+                <p><label for="currentAmount">currentAmount</label>
+                    <input disabled type="text" id="currentAmount" th:field="*{currentAmount}" class="form-control"
+                           th:errorclass="field-error"></p>
+                <p><label for="goalAmount">goalAmount</label>
+                    <input disabled type="text" id="goalAmount" th:field="*{goalAmount}" class="form-control"
+                           th:errorclass="field-error"></p>
+                <p><label for="detailImagePath">detailImagePath</label>
+                <img
+                        id="detailImagePath"
+                        th:src="${campaign.detailImagePath}"
+                        alt="detail image">
+                <p><label for="reviewImagePath">reviewImagePath</label>
+                <img
+                        id="reviewImagePath"
+                        th:src="${campaign.reviewImagePath}"
+                        alt="review image">
+            </div>
+        </div>
+    </form>
+    <form
+            method="get"
+            action="#"
+            th:action="@{/admin/limit/{id}(id = ${campaign.campaignId})}">
+        <label for="isAccept">승인</label>
+        <input id="isAccept" name="isAccept" type="radio" value="true" checked>
+        <label for="isNotAccept">거부</label>
+        <input id="isNotAccept" name="isAccept" type="radio" value="false">
+        <button type="submit" class="btn btn-primary btn-lg">
+            승인 여부 변경
+        </button>
 
-</form>
+    </form>
+</div>
 </body>
 </html>
