--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,21 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <title>Donation Server index</title>
 </head>
 <body>
-<h1>Welcome to Donation website</h1>
+<div class="container">
+    <div class="py-5 text-center">
+        <h1>Welcome to Donation website</h1>
+    </div>
     <a href="/new" methods="get">로그인 페이지</a><br>
     <a href="/admin" methods="get">관리자 페이지</a><br>
     <a href="/new/campaign" methods="get">켐페인 페이지</a><br>
+</div>
 </body>
 </html>
