--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,23 +10,25 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>Login</h1>
-<form method="post" id="authForm" action="/new/login">
-    <div>
-        <p>
-            <label for="loginId">아이디</label>
-            <input type="email" id="loginId" name="email" placeholder="ID">
-        </p>
-        <p>
-            <label for="loginPw">비밀번호</label>
-            <input type="password" id="loginPw" name="password" placeholder="Password">
-        </p>
+<div class="container">
+
+    <div class="py-5 text-center">
+        <h1>Login</h1>
     </div>
-    <button type="submit">로그인</button>
-    <div>
-        <input type="checkbox" id="keepLogin" name="keepLogin">
-        <label for="keepLogin"><span>로그인 상태 유지</span></label>
-    </div>
-</form>
+
+    <form method="post" id="authForm" action="/new/login">
+        <div>
+            <p>
+                <label for="loginId">이메일</label>
+                <input type="email" id="loginId" name="email" placeholder="ID" class="form-control">
+            </p>
+            <p>
+                <label for="loginPw">비밀번호</label>
+                <input type="password" id="loginPw" name="password" placeholder="Password" class="form-control">
+            </p>
+        </div>
+        <button type="submit" class="w-100 btn btn-primary btn-lg">로그인</button>
+    </form>
+</div>
 </body>
 </html>
