BlockChainServiceImpl transfer fee 대행 계정 caver 등록 미흡 해결 payback 관련 데이터 결합 코드 수정

--- a/src/main/resources/templates/admin/category/category_home.html
+++ b/src/main/resources/templates/admin/category/category_home.html
@@ -19,12 +19,12 @@
     <tbody>
     <tr th:each="category : ${categories}">
         <td th:text="${category.name}">name</td>
-        <td>
-            <button class="btn btn-primary float-end"
-                    onclick="location.href='/'"
-                    th:onclick="|location.href='@{/admin/category/{category}(category=${category.name})}'|">수정
-            </button>
-        </td>
+<!--        <td>-->
+<!--            <button class="btn btn-primary float-end"-->
+<!--                    onclick="location.href='/'"-->
+<!--                    th:onclick="|location.href='@{/admin/category/{category}(category=${category.name})}'|">수정-->
+<!--            </button>-->
+<!--        </td>-->
         <td>
             <form action="/"
                   th:action="@{/admin/category/delete/{category}(category=${category.name})}"
