--- a/src/main/resources/templates/admin/category/addCategory.html
+++ b/src/main/resources/templates/admin/category/addCategory.html
@@ -22,7 +22,7 @@
     </div>
 
     <div>
-        <button class="w-100 btn btn-primary btn-lg" type="submit">수정 완료</button>
+        <button class="w-100 btn btn-primary btn-lg" type="submit">등록</button>
     </div>
 </form>
 
