--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +15,8 @@
     <div class="py-5 text-center">
         <h1>Welcome to Donation website</h1>
     </div>
-    <a href="/new" methods="get">로그인 페이지</a><br>
+    <a th:if="${session.loginMember == null}" href="/login" th:text="로그인" methods="get">로그인</a>
+    <a th:unless="${session.loginMember == null}" th:text="로그아웃" href="/logout" methods="get">로그아웃</a><br>
     <a href="/admin" methods="get">관리자 페이지</a><br>
     <a href="/new/campaign" methods="get">켐페인 페이지</a><br>
 </div>
